[package]
name = "gl_painter_tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "buffer_triangles"

[[bin]]
name = "grouped_stencil"

[dependencies]
gl = "^0.14"
glfw = "^0.45"
bytemuck = { version = "^1.12", features = ["derive"] }
log = "^0.4"
paste = "^1.0"
seq-macro = "^0.3"
env_logger = "^0.9"
rand = "0.8.5"

[dependencies.gl_painter]
path = "../"
